# telco-customer-churn-prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-yusuftejakusumah-data-preparation.ipynb  2.0-yusuftejakusumah-exploratory-data-analysis.ipynb  3.0-yusuftejakusumah-modeling-and-evaluation.ipynb
references/: Dataset File Dictionary.xlsx  Engineered Feature Dictionary.xlsx
telco_customer_churn_prediction/: __init__.py  config.py  dataset.py  features.py  plots.py
telco_customer_churn_prediction/modeling/: __init__.py  evaluation.py  predict.py  train.py
