[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "telco_customer_churn_prediction"
version = "0.0.1"
description = "This project applies machine learning to customer usage data to predict customers at risk of churning."
authors = [
  { name = "Yusuf Tejakusumah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["telco_customer_churn_prediction"]
include = ["pyproject.toml", "telco_customer_churn_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["telco_customer_churn_prediction"]
force-sort-within-sections = true

